--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+
+# Local env files
+.env
+.env.*.local
 *.local
+
+# Firebase cache & config
+.firebase/
+.firebaserc
+.storage/
 
 # Editor directories and files
 .vscode/*
