Major UI/UX improvements for medical portal
 Enhanced Student Assignments Section:
- Added comprehensive stats dashboard with overdue, due soon, and completed counts
- Implemented smart filtering with quick action buttons
- Added priority alerts and visual indicators for urgent assignments
- Improved assignment cards with better visual hierarchy
- Enhanced action buttons with context-aware styling

 Enhanced Main Assignments Page:
- Added dashboard overview for teachers with assignment statistics
- Implemented advanced filtering system (All, Upcoming, Overdue, Past)
- Enhanced assignment cards with priority alerts and status indicators
- Improved search functionality and responsive design
- Added smart sorting prioritizing overdue assignments

 Technical Improvements:
- Removed OSCE assignment type and related functionality
- Fixed React warnings and TypeScript errors
- Improved error handling and code organization
- Enhanced mobile responsiveness across all components

 UI/UX Enhancements:
- Better color coding and visual feedback
- Improved button styling and hover effects
- Enhanced typography and spacing
- Added emoji icons for better visual communication
- Implemented gradient backgrounds and modern design elements

 Code Quality:
- Removed debug logging statements
- Fixed JSX syntax errors
- Improved component structure and reusability
- Added proper error boundaries and loading states

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
