--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "clean": "rimraf dist node_modules/.vite",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "emulators:start": "firebase emulators:start --import=./firebase-data --export-on-exit=./firebase-data",
+    "emulators:start:fresh": "firebase emulators:start --export-on-exit=./firebase-data",
+    "emulators:export": "firebase emulators:export ./firebase-data",
+    "emulators:import": "firebase emulators:start --import=./firebase-data"
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.12",
@@ -38,6 +42,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
