--- a/package.json
+++ b/package.json
@@ -21,22 +21,30 @@
     "emulators:import": "firebase emulators:start --import=./firebase-data"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.541.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
